resolves #194 jump to fragment using pure CSS (with minor JavaScript patch for browsers that struggle)

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -65,9 +65,10 @@ html.is-clipped--nav {
 }
 
 .nav-panel-menu {
+  height: var(--nav-panel-menu-height);
   overflow-y: scroll;
   overscroll-behavior: none;
-  height: var(--nav-panel-menu-height);
+  scroll-behavior: auto;
 }
 
 .nav-panel-menu:not(.is-active) .nav-menu {
@@ -205,6 +206,7 @@ html.is-clipped--nav {
   margin: 0;
   overflow-y: scroll;
   overscroll-behavior: none;
+  scroll-behavior: auto;
   max-height: 100%;
   display: block;
 }
